# calzone

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml  pytest.ini
.github/workflows/: build-geant4.yml  package.yml
calzone/: __init__.py
docs/: README.md  conftest.py
docs/source/: api.rst  conf.py  display.rst  geometry.py  geometry.rst  index.rst  installation.rst  references.rst  requirements.txt
docs/source/include/: benchmark-geometry.toml  topography-geometry.toml  trajectograph-geometry.toml  trajectograph-layer.toml
examples/: README.md
examples/benchmark/: geometry.toml  run.py
examples/gamma/benchmark/: README.md  run.py
examples/gamma/goupil/: README.md  geometry.toml  run.py
examples/gamma/underwater/: README.md  detector.toml  geometry.toml  run.py
examples/geometry/freecad/: .gitignore  README.md  example.FCStd  export.py
examples/geometry/topography/: README.md  generate.py  geometry.toml
examples/muon/trajectograph/: README.md  chamber.toml  geometry.toml  layer.toml  run.py
examples/muon/underwater/: README.md  detector.toml  geometry.toml  run.py
examples/pavin/: detector.toml  geometry.toml  run.py
paper/: paper.bib  paper.md
src/: calzone.h  cxx.rs  error.cc  error.rs  geometry.cc  geometry.rs  lib.rs  materials.cc  materials.rs  simulation.cc  simulation.rs  utils.rs
src/geometry/: bytes.rs  map.rs  materials.cc  materials.rs  mesh.cc  mesh.h  mesh.rs  solids.cc  solids.h  tessellation.cc  tessellation.h  tessellation.rs  volume.rs
src/materials/: gate.rs
src/python/calzone/: __init__.py  __main__.py
src/simulation/: physics.cc  physics.h  physics.rs  random.cc  random.h  random.rs  sampler.cc  sampler.h  sampler.rs  source.cc  source.h  source.rs  tracker.cc  tracker.h
src/utils/: data.rs  error.rs  extract.rs  float.rs  io.rs  numpy.rs
tests/: README.md  conftest.py  requirements.txt  test_examples.py  test_geometry.py  test_materials.py  test_simulation.py
tests/assets/: cube.stl
