[package]
name = "calzone"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cxx = "1.0"
derive_more = "0.99"
enum-variants-strings = "0.3"
getrandom = "0.2"
indexmap = "2.2"
process_path = "0.1"
pyo3 = { version = "0.21", features = ["abi3", "extension-module"] }
rand = "0.8"
rand_pcg = "0.3"
regex = "1.10"
temp-dir = "0.1"

[build-dependencies]
cxx-build = "1.0"
