[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "calzone"
authors = [
    {name = "Valentin Niess", email = "valentin.niess@gmail.com"}
]
description = "A Geant4 Python wrapper."
readme = "README.md"
license = {text = "LGPLv3"}
keywords = ["Python", "Monte Carlo", "Geant4"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics"
]
version = "1.1.2"
requires-python = ">=3.7.0"
dependencies = [
    "numpy >= 1.6.0",
]

[project.scripts]
calzone = "calzone.__main__:main"

[project.urls]
source = "https://github.com/niess/calzone"

[tool.setuptools.packages.find]
where = ["src/python"]

[[tool.setuptools-rust.ext-modules]]
target = "calzone.calzone"

# Build options for Python wheels.
[tool.cibuildwheel]
test-command = [
  'pytest --doctest-glob="*.rst" -v -m "not requires_data" {project}/tests {project}/docs/source',
  'python {project}/examples/geometry/topography/generate.py',
  'test -f "{project}/examples/geometry/topography/meshes/terrain.png"',
]
test-requires = [ "Pillow", "pytest" ]

[tool.cibuildwheel.linux]
before-all = """
curl -sSf https://sh.rustup.rs -o rustup.sh && \
sh rustup.sh -y && \
curl -sSf -L https://github.com/niess/calzone/releases/download/geant4-11.3.0/geant4-11.3.0-manylinux2014_$(uname -m).tar.gz -o geant4.tar.gz && \
tar -xzf geant4.tar.gz\
"""
repair-wheel-command = """
LD_LIBRARY_PATH=$PWD/geant4/lib64/:$PWD/geant4/lib/:$LD_LIBRARY_PATH \
auditwheel repair -w {dest_dir} {wheel}\
"""
build = [ "cp37-manylinux_x86_64", "cp37-manylinux_aarch64" ]
environment = "PATH=$HOME/.cargo/bin:$PATH"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]
before-all = """
curl -sSf -L https://github.com/niess/calzone/releases/download/geant4-11.3.0/geant4-11.3.0-macosx_11_0_$(uname -m).tar.gz -o geant4.tar.gz && \
tar -xzf geant4.tar.gz\
"""
build = "cp38-macosx_*"
repair-wheel-command = """
DYLD_LIBRARY_PATH=$PWD/geant4/lib64/:$PWD/geant4/lib/:$DYLD_LIBRARY_PATH \
delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}
"""
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
before-all = "python3 -m pip install delvewheel"
build = "cp39-win_amd64"
repair-wheel-command = 'delvewheel repair --add-path "%CD%\geant4\bin;%CD%\geant4\lib" -w {dest_dir} -v {wheel}'
